# pystart-v2-api

./: .gitignore  LICENSE  README.md  data_processing.py  docker-compose.yml  docker-entrypoint.sh  dockerfile  main.py  pyproject.toml  result.csv
src/: data_processing.py  docker-entrypoint.sh  main.py  pyproject.toml
