[tool.poetry]
name = "pystart-v2-api"
version = "0.1.0"
description = ""
authors = ["Rafał Kowalski <rafkow91@yahoo.com>"]
license = "MiT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pydantic = "^1.10.5"
uvicorn = "^0.20.0"
pandas = "^1.5.3"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.16.2"
autopep8 = "^2.0.1"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
